iac_benchmark/multi_root_templates/Tianyi2__IRIS/data__terraform_collected_templates_new__group_30803_modules_network_aws/vpc.tf
resource "aws_vpc" "vpc" {
    cidr_block = var.vpc_cidr
    enable_dns_hostnames = true
    tags = {
        Name = "${var.env_name}-vpc"
    }
}
